--- a/app/views/prosecution_cases/show.html.haml
+++ b/app/views/prosecution_cases/show.html.haml
@@ -42,8 +42,8 @@
               = hearing_summary.hearing_type
             %td.govuk-table__cell
               - hearing = prosecution_case.hearings.find { |h| h.id == hearing_summary.id}
-              - providers = hearing.providers.map { |p| "#{p.name} (#{p.role})" }.join('<br>').html_safe
-              = providers || t('generic.not_available')
+              - providers = safe_join(hearing.providers.map { |p| "#{p.name} (#{p.role})" }, tag(:br))
+              = providers.present? ? providers : t('generic.not_available')
 
 - if Rails.configuration.x.display_raw_responses
   %br
